add um paragrafo para aprender os Comandos

--- a/site hello world/index.html
+++ b/site hello world/index.html
@@ -9,6 +9,7 @@
     <h1>hello, world</h1>
     <hr
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt fugiat soluta quaerat, autem harum, aperiam est itaque asperiores dolor quia laboriosam exercitationem sapiente, neque magnam quod necessitatibus in doloremque modi!</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non aut perspiciatis, quia id rem illum! Tempora, mollitia iure! Possimus, architecto repellendus modi incidunt voluptates dolore fugit quis eveniet nesciunt doloremque.</p>
     
 </body>
 </html>
